--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,5 +1,53 @@
 {
+    "Log out": "Выйти",
+    "Log in": "Войти",
+
     "Wall": "Стена",
     "Category": "Категории",
-    "Goals": "Цели"
+    "Goals": "Цели",
+
+    "Mon": "Пнд",
+    "Tue": "Втр",
+    "Wed": "Срд",
+    "Thu": "Чтв",
+    "Fri": "Птн",
+    "Sat": "Сбт",
+    "Sun": "Вск",
+    "Today": "Сегодня", 
+
+    "NameCategory": "Сфера Влияния",
+    "DescriptionCategory": "Описание Сферы Влияния",
+    "SetColorForCategory": "Установите цвет",
+
+    "Add": "Добавить",
+    "Delete": "Удалить",
+    "Update": "Обновить",
+
+    "Step1": {
+        "SpotYourInfluenceScope" : "Шаг 1: Определи Свои Сферы Влияния"
+    },
+    "CreateYourInfluenceScope": "Создай сферу влияния",
+    "YourListOfInfluenceScope": "Твой список сфер влияния",
+
+    "InfluenceScopeDescription": "Вы можете сделать упор на одну сферу, чтобы допиться успеха. Но как правило, человек может быть поглащен одной сферой забывая о другой. СБАЛАНСИРОВАННЫЕ сферы влияния помогут вам добиться ГАРМОНИИ в вашей жизни.",
+
+    "FamalyScopeName": "Семья",
+    "HealthScopeName": "Здоровье",
+    "HobbyScopeName": "Хобби",
+    "SportScopeName": "Спорт",
+    "FrendsScopeName": "Друзья",
+    "BusinessScopeName": "Бизнес",
+    "LearningScopeName": "Развитие",
+    "RelaxScopeName": "Отдых",
+    "CustomScopeName": "Своя сфера",
+
+    "FamalyScopeDescription": "Все, чего бы ты не достигал, к чему бы не стремился, все это мы делаем ради кого то. Не забывай, что в конце пути с тобой останется твоя семья.",
+    "HealthScopeDescription": "Многие вспоминают о своем здоровье только когда оно само о себе напомнит. Позаботься о нем заранее, а оно ответит тебе взаимностью.",
+    "HobbyScopeDescription": "Некоторые люди восхищают, вдохновляют, они становятся интересными. И это из за того, что они увлечены чем-то и не стоят на месте.",
+    "SportScopeDescription": "Тут не нужно много слов. Спорт и закаляет, и воспитывает победителя, и учит добиваться целей, и он нужен для укрепления духа и тела.",
+    "FrendsScopeDescription": "Про друзей некоторые люди тоже забывают. Забывают в погоне за счастьем о том, что счастливыми нас также делают и друзья.",
+    "BusinessScopeDescription": "А вот про бизнес уже вправе решать каждый сам. Но наверное каждый из нас задумывался, - <<Надо делать что то свое>>.",
+    "LearningScopeDescription": "Мир вокруг не стоит на месте. Так будь же на коне, на пике, будь в тренде, совершенствуйся, выработай привычку читать.",
+    "RelaxScopeDescription": "Но и про отдых не забывай. Ведь можно загнать себя и потерять всякий интерес. Сосуд иногда нужно опустошить прежде чем его наполнить.",
+    "CustomScopeDescription": "Или создайте свою категорию. Может у Вас есть мировоззрение, которое достойно быть в отдельной категории."
 }
