--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -49,5 +49,12 @@
     "BusinessScopeDescription": "А вот про бизнес уже вправе решать каждый сам. Но наверное каждый из нас задумывался, - <<Надо делать что то свое>>.",
     "LearningScopeDescription": "Мир вокруг не стоит на месте. Так будь же на коне, на пике, будь в тренде, совершенствуйся, выработай привычку читать.",
     "RelaxScopeDescription": "Но и про отдых не забывай. Ведь можно загнать себя и потерять всякий интерес. Сосуд иногда нужно опустошить прежде чем его наполнить.",
-    "CustomScopeDescription": "Или создайте свою категорию. Может у Вас есть мировоззрение, которое достойно быть в отдельной категории."
+    "CustomScopeDescription": "Или создайте свою категорию. Может у Вас есть мировоззрение, которое достойно быть в отдельной категории.",
+
+    "SignIn": "Вход",
+    "Registration": "Регистрация",
+    "CreateAccount": "Создать Аккаунт",
+    "Email": "Email",
+    "Password": "Пароль",
+    "Nickname": "Ник"
 }
