--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -3,8 +3,8 @@
     "Log in": "Войти",
 
     "Wall": "Стена",
-    "Category": "Категории",
-    "Goals": "Цели",
+    "Category": "Сферы влияния",
+    "Goals": "Привычки",
 
     "Mon": "Пнд",
     "Tue": "Втр",
@@ -59,14 +59,14 @@
     "Nickname": "Ник",
 
     "Step2": {
-        "SetYourSkill": "ШАГ 2: Работай со своими навыками",
-        "CreateYouSkill": "Создай навык",
-        "YouSkillList": "Твои навыки",
-        "SkillDescriptionTitle": "Зачем нужно работать с навыками?",
-        "SkillDescription": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint consequuntur aspernatur obcaecati quidem voluptatem quae laborum atque. A aliquid earum ad fuga vel recusandae quibusdam cum in possimus delectus, accusantium, tempora nihil blanditiis cumque corrupti voluptatem laboriosam doloribus, architecto dolorum?",
-        "IsPrivate": "Скрыть Навык",
-        "SkillDescriptionPlaceholder": "Описание Навыка",
-        "SkillName": "Название Навыка",
+        "SetYourSkill": "ШАГ 2: Определи свою систему привычек",
+        "CreateYouSkill": "Создай привычку",
+        "YouSkillList": "Твои привычки",
+        "SkillDescriptionTitle": "Зачем нужно работать с привычками?",
+        "SkillDescription": "Наши ежедневные действия определяют наше будущее. Мы можем прожить день сурка, а можем ежедневно делать небольшой шаг на пути к своей миссиии, цели жизни, мечте. И да, эмоции счастья приходят от ощущения движения к своей мечте. Возможно у каждого бывало ощущение, что день прожит, а ты за целый день так и не сделал ничего полезного. Почему бы не попробовать определить свою систему привычек, которые будут способствовать достижению твоей цели и ежедневно работать с ними, чтобы это стало нормой.",
+        "IsPrivate": "Скрыть Привычку",
+        "SkillDescriptionPlaceholder": "Описание Привычки",
+        "SkillName": "Название Привычки",
         "SkillSign": "Сокращение / Знак / Символ"
     }
 }
