Brick Type Cards Filter Panel

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -29,7 +29,7 @@
     "CreateYourInfluenceScope": "Создай сферу влияния",
     "YourListOfInfluenceScope": "Твои сферы влияния",
 
-    "InfluenceScopeDescription": "Вы можете сделать упор на одну сферу, чтобы допиться успеха. Но как правило, человек может быть поглащен одной сферой забывая о другой. СБАЛАНСИРОВАННЫЕ сферы влияния помогут вам добиться ГАРМОНИИ в вашей жизни.",
+    "InfluenceScopeDescription": "Вы можете сделать упор на одну сферу, чтобы добиться успеха. Но как правило, человек может быть увлечен одной сферой забывая о другой. СБАЛАНСИРОВАННЫЕ сферы влияния помогут вам добиться ГАРМОНИИ в вашей жизни.",
 
     "FamalyScopeName": "Семья",
     "HealthScopeName": "Здоровье",
