Added ability to activate bricktypes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
     "Add": "Add",
     "Delete": "Delete",
     "Update": "Update", 
+    "Activate": "Activate",
 
     "Step1": {
         "SpotYourInfluenceScope" : "Step 1: Spot Your Influence Scope"
