--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -22,6 +22,7 @@
     "Add": "Добавить",
     "Delete": "Удалить",
     "Update": "Обновить",
+    "Activate": "Активировать",
 
     "Step1": {
         "SpotYourInfluenceScope" : "Шаг 1: Определи Свои Сферы Влияния"
