--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,7 +4,7 @@
 
     "Wall": "Wall",
     "Category": "Category",
-    "Goals": "Goals",
+    "Habits": "Habits",
 
     "Mon": "Mon",
     "Tue": "Tue",
