--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -4,7 +4,7 @@
 
     "Wall": "Стена",
     "Category": "Сферы влияния",
-    "Goals": "Привычки",
+    "Habits": "Привычки",
 
     "Mon": "Пнд",
     "Tue": "Втр",
